syntax = "proto3";
package dkv.raftpb;
option go_package = "github.com/flipkart-incubator/dkv/internal/server/sync/raftpb";

import "pkg/serverpb/api.proto";

message InternalRaftRequest {
  serverpb.PutRequest put = 10;
  serverpb.GetRequest get = 11;
  serverpb.MultiGetRequest multi_get = 12;
  serverpb.DeleteRequest delete = 13;
}
